Fixed alignment on create a comment box.

--- a/style.css
+++ b/style.css
@@ -1035,6 +1035,15 @@
 			width: auto !important;
 	}
 	
+	/* for some reason alignment is off on messages page ... */
+	.messages-page .usertext-edit > .md {
+		margin: 0px !important;
+	}
+	
+	.messages-page .usertext-edit textarea {	   
+	   width: 612px !important;
+	}
+	
 	.usertext-edit textarea {
 	    font-family: inherit !important;
 	    font-size: 14px !important;
@@ -1078,7 +1087,7 @@
 	}
 	
 	/* save and big editor buttons */
-	.usertext-edit .save, .RESBigEditorPop {
+	.usertext-edit .usertext-buttons button, .RESBigEditorPop {
 		border: 1px solid #CCC !important;
 		margin: 5px 5px 10px 0px !important;;
 		padding: 4px 6px !important;;
@@ -1635,8 +1644,8 @@
 	    border: 1px solid #F5F5F5 !important;
 	}
 	
-	/* save & big editor buttons beneath comment box */
-	.res-nightmode .RESBigEditorPop , .res-nightmode .usertext-edit .save {
+	/* save, cancel, big editor button beneath comment box */
+	.res-nightmode .usertext-buttons button, .res-nightmode .RESBigEditorPop  {
 		border: 1px solid #666666 !important;
 	}
 	
